# corniferbot

./: .gitignore  Cargo.toml
docs/: lib_telegram_bot.txt
src/: main.rs
