[package]
name = "corniferbot"
version = "0.1.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# error handling
anyhow = "1.0.26"

# telegram bot api bindings
# latest version on crates.io uses an old version of tokio, so using the github version instead
telegram-bot = { version =  "0.7.0", git = "https://github.com/telegram-rs/telegram-bot.git" }

# async runtime
tokio = { version = "0.2", features = ["fs", "io-util", "stream", "macros", "time"]}

# logging
tracing = "0.1"
tracing-subscriber = "0.2.0"
tracing-futures = "0.2.1"